--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgMZRJ9Hlj82uCXPX5QV2X"
+      "authorship_tag": "ABX9TyP4dEc1dNQv+G8IyX+pQP4j"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "YV29Ucr1hf74"
       },
@@ -53,17 +53,16 @@
         "    sum = 0;\n",
         "    continue\n",
         "  sum += int(i)\n",
-        "max = max(elfs)\n",
-        "max"
+        "max(elfs)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "86tJazHWli4E",
-        "outputId": "2311a593-ccf8-4012-dc7e-aadfe9787614"
+        "outputId": "7e393c38-9a45-4ec3-aa85-513a7268119b"
       },
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -73,7 +72,46 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Part 2"
+      ],
+      "metadata": {
+        "id": "9ExU-62uv1qb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "elfs.sort(reverse = True)\n",
+        "firstthree = 0\n",
+        "for i in range(3):\n",
+        "  firstthree += elfs[i]\n",
+        "firstthree"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YxCYLeAWv3BA",
+        "outputId": "cf433866-be5f-4718-9b7a-ece1fa81e8a3"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "199357"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     }
