Solutions for Day2

--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -4,7 +4,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4dEc1dNQv+G8IyX+pQP4j"
+      "collapsed_sections": [
+        "E4QBw_gUlk-7",
+        "ZVOpXtpfJ9YM"
+      ],
+      "authorship_tag": "ABX9TyNTq1wv3Iu4jgXKW3FmIlrQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -62,7 +66,7 @@
         "id": "86tJazHWli4E",
         "outputId": "7e393c38-9a45-4ec3-aa85-513a7268119b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +105,7 @@
         "id": "YxCYLeAWv3BA",
         "outputId": "cf433866-be5f-4718-9b7a-ece1fa81e8a3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,6 +116,140 @@
           },
           "metadata": {},
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Day 2\n",
+        "Part 1"
+      ],
+      "metadata": {
+        "id": "ZVOpXtpfJ9YM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def charToNum(char):\n",
+        "  num = ord(char) -64\n",
+        "  if(num > 23):\n",
+        "    num-= 23\n",
+        "  return num\n",
+        "def winscore(opponent, you):\n",
+        "  if(charToNum(opponent)-charToNum(you) == 0):\n",
+        "    return 3\n",
+        "  if(opponent == 'A'):\n",
+        "    if(you =='Z'):\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return 6\n",
+        "  if(opponent == 'B'):\n",
+        "    if(you == 'X'):\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return 6\n",
+        "  if(opponent == 'C'):\n",
+        "    if(you == 'Y'):\n",
+        "      return 0\n",
+        "    else:\n",
+        "      return 6\n",
+        "  \n",
+        "def calculatescore(opponent, you):\n",
+        "  score = 0\n",
+        "  score += winscore(opponent,you)\n",
+        "  score += charToNum(you)\n",
+        "  return score\n",
+        "\n",
+        "\n",
+        "cheatsheet = getDataFromGitHub(2)\n",
+        "\n",
+        "sum = 0\n",
+        "for i in range(len(cheatsheet)):\n",
+        "  values = cheatsheet[i].split()\n",
+        "  sum += calculatescore(values[0],values[1])\n",
+        "sum"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lGp1aSX2KA9_",
+        "outputId": "49278db3-4e91-4285-a3ae-bef317fa4bfc"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15691"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Part 2"
+      ],
+      "metadata": {
+        "id": "Anp3mBoDc15M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def GetMove(opponent, outcome):#yes yes, i know this method is badly written but i really dont want to use enum and stuff in python so IF statements it is. I like IF statements.\n",
+        "  if(outcome == 'Y'):\n",
+        "    return(chr(ord(opponent) + 23)) \n",
+        "  if(opponent == 'A'):\n",
+        "    if(outcome == 'X'):\n",
+        "      return 'Z'\n",
+        "    else:\n",
+        "      return 'Y'\n",
+        "  if(opponent == 'B'):\n",
+        "    if(outcome == 'X'):\n",
+        "      return 'X'\n",
+        "    else:\n",
+        "      return 'Z'\n",
+        "  if(opponent == 'C'):\n",
+        "    if(outcome == 'X'):\n",
+        "      return 'Y'\n",
+        "    else:\n",
+        "      return 'X'\n",
+        "\n",
+        "cheatsheet = getDataFromGitHub(2)\n",
+        "\n",
+        "sum = 0\n",
+        "for i in range(len(cheatsheet)):\n",
+        "  values = cheatsheet[i].split()\n",
+        "  mymove = GetMove(values[0],values[1])\n",
+        "  sum += calculatescore(values[0],mymove)\n",
+        "sum"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X--oEo89c3hv",
+        "outputId": "a06d7b14-b0ab-4bd8-943c-f2705016b9c5"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12989"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
         }
       ]
     }
