Solution for day 3

--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -8,7 +8,7 @@
         "E4QBw_gUlk-7",
         "ZVOpXtpfJ9YM"
       ],
-      "authorship_tag": "ABX9TyNTq1wv3Iu4jgXKW3FmIlrQ"
+      "authorship_tag": "ABX9TyPdUcNwu6AOVUv+O+d+Tl7R"
     },
     "kernelspec": {
       "name": "python3",
@@ -178,7 +178,7 @@
         "id": "lGp1aSX2KA9_",
         "outputId": "49278db3-4e91-4285-a3ae-bef317fa4bfc"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +239,7 @@
         "id": "X--oEo89c3hv",
         "outputId": "a06d7b14-b0ab-4bd8-943c-f2705016b9c5"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,6 +250,113 @@
           },
           "metadata": {},
           "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Day 3\n",
+        "Part 1"
+      ],
+      "metadata": {
+        "id": "op4P0Cj3p_7T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def backpackCharToNum(char):\n",
+        "  asciicode= ord(char)\n",
+        "  if(asciicode > 96):\n",
+        "    asciicode -= 96\n",
+        "  else:\n",
+        "    asciicode -= 38\n",
+        "  return asciicode\n",
+        "\n",
+        "\n",
+        "allbackpacks = getDataFromGitHub(3)\n",
+        "splittedbackpacks = []\n",
+        "for i in range(len (allbackpacks)):\n",
+        "  asNumbers = []\n",
+        "  for c in allbackpacks[i]:\n",
+        "    asNumbers.append(backpackCharToNum(c))\n",
+        "  allbackpacks[i] = asNumbers\n",
+        "  length = len(allbackpacks[i])\n",
+        "  firstpart = allbackpacks[i][:length//2]\n",
+        "  secondpart = allbackpacks[i][length//2:]\n",
+        "\n",
+        "  splittedbackpacks.append([firstpart,secondpart])\n",
+        "\n",
+        "score = 0\n",
+        "for pack in splittedbackpacks:\n",
+        "  samenumber = list(set(pack[0]).intersection(pack[1]))\n",
+        "  score += samenumber[0]\n",
+        "score\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j5SM80TiqDQA",
+        "outputId": "0b840ea6-861e-410f-85ed-097c77c0077a"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7889"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Part 2"
+      ],
+      "metadata": {
+        "id": "MLQn8SNNw8di"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sameItem(backpacks):\n",
+        "  return set.intersection(*[set(list) for list in backpacks]).pop()\n",
+        "  \n",
+        "priorities = 0\n",
+        "for i in range(0,len(allbackpacks),3):\n",
+        "  b1 = allbackpacks[i]\n",
+        "  b2 = allbackpacks[i +1]\n",
+        "  b3 = allbackpacks[i+ 2]\n",
+        "  \n",
+        "  priorities += sameItem([b1,b2,b3])\n",
+        "priorities"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eE5zO6Vkw9vy",
+        "outputId": "166fdf7b-fd4d-44f5-ed3f-b6ec1bbd2935"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2825"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
         }
       ]
     }
