--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -6,9 +6,10 @@
       "provenance": [],
       "collapsed_sections": [
         "E4QBw_gUlk-7",
-        "ZVOpXtpfJ9YM"
+        "ZVOpXtpfJ9YM",
+        "op4P0Cj3p_7T"
       ],
-      "authorship_tag": "ABX9TyMJt3F/aLXUPsmJEBwceRBi"
+      "authorship_tag": "ABX9TyOSI/gFXzUR7d4d+sv3BEtF"
     },
     "kernelspec": {
       "name": "python3",
@@ -301,7 +302,7 @@
         "id": "j5SM80TiqDQA",
         "outputId": "0b840ea6-861e-410f-85ed-097c77c0077a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,8 +334,8 @@
         "priorities = 0\n",
         "for i in range(0,len(allbackpacks),3):\n",
         "  b1 = allbackpacks[i]\n",
-        "  b2 = allbackpacks[i+1]\n",
-        "  b3 = allbackpacks[i+2]\n",
+        "  b2 = allbackpacks[i +1]\n",
+        "  b3 = allbackpacks[i+ 2]\n",
         "  \n",
         "  priorities += sameItem([b1,b2,b3])\n",
         "priorities"
@@ -346,7 +347,7 @@
         "id": "eE5zO6Vkw9vy",
         "outputId": "166fdf7b-fd4d-44f5-ed3f-b6ec1bbd2935"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,6 +358,111 @@
           },
           "metadata": {},
           "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Day 4\n",
+        "Part 1"
+      ],
+      "metadata": {
+        "id": "rVsB7qJlCg6T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "def GetMinMaxPair(pair):\n",
+        "  splitted = pair.split(',')\n",
+        "  firstassignment = ToMinMaxList(splitted[0])\n",
+        "  secondassignment = ToMinMaxList(splitted[1])\n",
+        "  return firstassignment,secondassignment\n",
+        "\n",
+        "def ToMinMaxList(assignment):\n",
+        "  minmax = assignment.split('-')\n",
+        "  minmax[0] = int(minmax[0])\n",
+        "  minmax[1] = int(minmax[1])\n",
+        "  return minmax\n",
+        "\n",
+        "def TowMinMaxesContaineachOther(first,second):\n",
+        "  return FirstMinmaxFullyContainsSecond(first,second) or FirstMinmaxFullyContainsSecond(second,first)\n",
+        "\n",
+        "def FirstMinmaxFullyContainsSecond(f,s):\n",
+        "  if(f[0] > s[0]):\n",
+        "    return False\n",
+        "  if(f[1] < s[1]):\n",
+        "    return False\n",
+        "  return True\n",
+        "\n",
+        "allpairings = getDataFromGitHub(4)\n",
+        "AmountOfPairingsThatFullyContainEachOther = 0\n",
+        "for pairing in allpairings:\n",
+        "  firstminmax, secondminmax = GetMinMaxPair(pairing)\n",
+        "  if(TowMinMaxesContaineachOther(firstminmax,secondminmax)):\n",
+        "    AmountOfPairingsThatFullyContainEachOther += 1\n",
+        "AmountOfPairingsThatFullyContainEachOther"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YH3yuAUlClkY",
+        "outputId": "960bf4f2-780b-4238-c282-3e2f0ac3da3d"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "450"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def TowMinMaxesCompletelySeperated(first,second):\n",
+        "   return FirstMinmaxSmaller(first,second) or FirstMinmaxSmaller(second,first)\n",
+        "def FirstMinmaxSmaller(f,s):\n",
+        "  if(f[1] < s[0]):\n",
+        "    return True\n",
+        "  return False\n",
+        "\n",
+        "AmountOfPairingsSeperated = 0\n",
+        "for pairing in allpairings:\n",
+        "  firstminmax, secondminmax = GetMinMaxPair(pairing)\n",
+        "  if(TowMinMaxesCompletelySeperated(firstminmax,secondminmax)):\n",
+        "    AmountOfPairingsSeperated += 1\n",
+        "res = len(allpairings) - AmountOfPairingsSeperated\n",
+        "res"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QW4qH-bYKdka",
+        "outputId": "c26935e0-adfc-4663-d0e3-22498a9f1632"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "837"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
         }
       ]
     }
