--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -9,7 +9,7 @@
         "ZVOpXtpfJ9YM",
         "op4P0Cj3p_7T"
       ],
-      "authorship_tag": "ABX9TyOSI/gFXzUR7d4d+sv3BEtF"
+      "authorship_tag": "ABX9TyOMvzOKZSO5iEW1pNgNHIG7"
     },
     "kernelspec": {
       "name": "python3",
@@ -374,8 +374,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "def GetMinMaxPair(pair):\n",
         "  splitted = pair.split(',')\n",
         "  firstassignment = ToMinMaxList(splitted[0])\n",
@@ -426,6 +424,15 @@
           "execution_count": 34
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Part 2"
+      ],
+      "metadata": {
+        "id": "Ytkrp3GXQve9"
+      }
     },
     {
       "cell_type": "code",
