Solutions for day 5

--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -7,9 +7,10 @@
       "collapsed_sections": [
         "E4QBw_gUlk-7",
         "ZVOpXtpfJ9YM",
-        "op4P0Cj3p_7T"
+        "op4P0Cj3p_7T",
+        "rVsB7qJlCg6T"
       ],
-      "authorship_tag": "ABX9TyOMvzOKZSO5iEW1pNgNHIG7"
+      "authorship_tag": "ABX9TyMVhql8hqljTTovy/vqPYhK"
     },
     "kernelspec": {
       "name": "python3",
@@ -411,7 +412,7 @@
         "id": "YH3yuAUlClkY",
         "outputId": "960bf4f2-780b-4238-c282-3e2f0ac3da3d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +460,7 @@
         "id": "QW4qH-bYKdka",
         "outputId": "c26935e0-adfc-4663-d0e3-22498a9f1632"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,6 +471,143 @@
           },
           "metadata": {},
           "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Day 5\n",
+        "Part 1"
+      ],
+      "metadata": {
+        "id": "npELRgFDloHS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def GetWareHouseAndAction(inputtext):\n",
+        "  indexofempftyline = 0\n",
+        "  for i in range(len(inputtext)):\n",
+        "    if(input5[i] == \"\"):\n",
+        "      indexofempftyline = i\n",
+        "  warehousestring = inputtext[0:indexofempftyline -1] #-1 because i dont need the numbers under the stacks\n",
+        "  procedure  = inputtext[indexofempftyline+1::]\n",
+        "\n",
+        "  numbuckets = int(((len(warehousestring[0])-3)/4 )+1)\n",
+        "  warehouse = []\n",
+        "  for i in range(numbuckets):\n",
+        "    bucket = []\n",
+        "    warehouse.append(bucket)\n",
+        "\n",
+        "  for line in warehousestring:\n",
+        "    for i in range(numbuckets):\n",
+        "      value = line[1 + i*4]\n",
+        "      if(value == \" \"):\n",
+        "        continue\n",
+        "      warehouse[i].append(value)\n",
+        "  for bucket in warehouse:\n",
+        "    bucket.reverse()\n",
+        "\n",
+        "  actions = []\n",
+        "  for line in procedure:\n",
+        "    line = line.replace('move ','')\n",
+        "    line = line.replace('from ','')\n",
+        "    line = line.replace('to ',\"\")\n",
+        "    splitted = line.split(' ')\n",
+        "    for i in range(len(splitted)):\n",
+        "      splitted[i] = int(splitted[i])\n",
+        "    actions.append(splitted)\n",
+        "\n",
+        "  return warehouse,actions\n",
+        "\n",
+        "input5 = getDataFromGitHub(5)\n",
+        "warehouse,actions = GetWareHouseAndAction(input5)\n",
+        "warehousecopy = warehouse.copy()\n",
+        "for action in actions:\n",
+        "  for i in range(action[0]):\n",
+        "    value = warehousecopy[action[1]-1].pop()\n",
+        "    warehousecopy[action[2]-1].append(value)\n",
+        "\n",
+        "result = \"\"  \n",
+        "for bucket in warehousecopy:\n",
+        "  result += bucket.pop()\n",
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "WDTbO7E_lnhL",
+        "outputId": "493787ae-91a1-4718-abb4-206abf82097b"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'TQRFCBSJJ'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Part 2"
+      ],
+      "metadata": {
+        "id": "FhgStc8Xw8Ky"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "warehouse,actions = GetWareHouseAndAction(input5)\n",
+        "for action in actions:\n",
+        "  stack = []\n",
+        "  for i in range(action[0]):\n",
+        "    stack.append(warehouse[action[1]-1].pop())\n",
+        "  stack.reverse()\n",
+        "  for item in stack:\n",
+        "    warehouse[action[2]-1].append(item)\n",
+        "\n",
+        "result = \"\"  \n",
+        "for bucket in warehouse:\n",
+        "  result += bucket.pop()\n",
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "VCX34apzw-XL",
+        "outputId": "d08e8b6f-36a3-495f-be88-fc662baf6ae3"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'RMHFJNVFP'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
     }
