Solution for day 6

--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -8,9 +8,11 @@
         "E4QBw_gUlk-7",
         "ZVOpXtpfJ9YM",
         "op4P0Cj3p_7T",
-        "rVsB7qJlCg6T"
+        "rVsB7qJlCg6T",
+        "npELRgFDloHS"
       ],
-      "authorship_tag": "ABX9TyMVhql8hqljTTovy/vqPYhK"
+      "name": "AdventOfCode2022.ipynb",
+      "authorship_tag": "ABX9TyOMx3+5t5HpuZQiJecJEPlP"
     },
     "kernelspec": {
       "name": "python3",
@@ -23,7 +25,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "YV29Ucr1hf74"
       },
@@ -543,7 +545,7 @@
         "id": "WDTbO7E_lnhL",
         "outputId": "493787ae-91a1-4718-abb4-206abf82097b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +596,7 @@
         "id": "VCX34apzw-XL",
         "outputId": "d08e8b6f-36a3-495f-be88-fc662baf6ae3"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,6 +610,88 @@
           },
           "metadata": {},
           "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Day 6\n",
+        "Part 1"
+      ],
+      "metadata": {
+        "id": "-Ki7Id7RorGU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_start_of_uniquesymbols(datastream,length):\n",
+        "    buffer = \"\" # initialize empty buffer\n",
+        "    for i in range(len(datastream)):\n",
+        "        buffer += datastream[i] # add next character to buffer\n",
+        "        if len(buffer) >= length:\n",
+        "            # check if the last four characters are all different\n",
+        "            if len(set(buffer[-length:])) == length:\n",
+        "                return i + 1 # return position of start of packet\n",
+        "    return -1 # return -1 if no start-of-packet marker was found\n",
+        "\n",
+        "datastream = getDataFromGitHub(6)\n",
+        "find_start_of_uniquesymbols(datastream[0],4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mqBUfonGovou",
+        "outputId": "b1f867cd-cb4c-4178-efec-b9fb224965fd"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1766"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Part 2"
+      ],
+      "metadata": {
+        "id": "BIXn75fQqRRw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "find_start_of_uniquesymbols(datastream[0],14)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2JT8Rrn4qQwe",
+        "outputId": "1dc6efbf-008f-4e21-fb27-27a040d7afdc"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2383"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
